voip: example: use VoIPSender.stopTime instead sim-time-limit

--- a/examples/voip/omnetpp.ini
+++ b/examples/voip/omnetpp.ini
@@ -1,7 +1,5 @@
 [General]
 
-sim-time-limit = 100s
-
 network = Voip
 
 **.numUdpApps = 1
@@ -12,3 +10,4 @@ network = Voip
 **.senderHost.udpApp[0].typename = "VoIPSender"
 **.senderHost.udpApp[0].destPort = 2000
 **.senderHost.udpApp[0].destAddress = "receiverHost"
+**.senderHost.udpApp[0].stopTime = 100s
