voip example: added Delayer

--- a/examples/voip/omnetpp.ini
+++ b/examples/voip/omnetpp.ini
@@ -11,3 +11,8 @@ network = Voip
 **.senderHost.udpApp[0].destPort = 2000
 **.senderHost.udpApp[0].destAddress = "receiverHost"
 **.senderHost.udpApp[0].stopTime = 100s
+
+#random delay:
+**.senderHost.eth[*].numOutputHooks = 1
+**.senderHost.eth[*].outputHook[0].typename = "Delayer"
+**.senderHost.eth[*].outputHook[0].delay = uniform(100ms, 250ms)
