voip: renamed classes and packet to SimpleVoIP*

--- a/examples/voip/omnetpp.ini
+++ b/examples/voip/omnetpp.ini
@@ -4,10 +4,10 @@ network = Voip
 
 **.numUdpApps = 1
 
-**.receiverHost.udpApp[0].typename = "VoIPReceiver"
+**.receiverHost.udpApp[0].typename = "SimpleVoIPReceiver"
 **.receiverHost.udpApp[0].localPort = 2000
 
-**.senderHost.udpApp[0].typename = "VoIPSender"
+**.senderHost.udpApp[0].typename = "SimpleVoIPSender"
 **.senderHost.udpApp[0].destPort = 2000
 **.senderHost.udpApp[0].destAddress = "receiverHost"
 **.senderHost.udpApp[0].stopTime = 100s
