voiptool/voipstream: renames in files
Renamed feature to VoIPStream.
Renamed classes, modules, messages, files:
  - VoIPPacket to VoIPStreamPacket
  - VoIPSourceApp to VoIPStreamSender
  - VoIPSinkApp to VoIPStreamReceiver
  - example folders and modules

--- a/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTrafficTest/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 
-network = VoIPToolTrafficTest
+network = VoIPStreamTrafficTest
 tkenv-plugin-path = ../../../etc/plugins
 
 warnings = true
@@ -16,12 +16,12 @@ cmdenv-express-mode = true
 #[Config config1]
 # udp app
 **.client.numUdpApps = 1
-**.client.udpApp[0].typename = "VoIPSinkApp"
+**.client.udpApp[0].typename = "VoIPStreamReceiver"
 **.client.udpApp[0].localPort = 1000
 **.client.udpApp[0].resultFile = "results/results.wav"
 
 **.server.numUdpApps = 1
-**.server.udpApp[0].typename = "VoIPSourceApp"
+**.server.udpApp[0].typename = "VoIPStreamSender"
 **.server.udpApp[0].packetTimeLength = 20ms
 **.server.udpApp[0].voipHeaderSize = 4B
 **.server.udpApp[0].samplingRate = 8000Hz
