--- a/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamLargeNet/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 
-network = VoIPToolLargeNet
+network = VoIPStreamLargeNet
 
 warnings = true
 num-rngs = 8
@@ -15,12 +15,12 @@ cmdenv-express-mode = true
 #[Config config1]
 # udp app
 **.voipClient.numUdpApps = 1
-**.voipClient.udpApp[0].typename = "VoIPSinkApp"
+**.voipClient.udpApp[0].typename = "VoIPStreamReceiver"
 **.voipClient.udpApp[0].localPort = 1000
 **.voipClient.udpApp[0].resultFile = "results/results.wav"
 
 **.voipServer.numUdpApps = 1
-**.voipServer.udpApp[0].typename = "VoIPSourceApp"
+**.voipServer.udpApp[0].typename = "VoIPStreamSender"
 **.voipServer.udpApp[0].packetTimeLength = 20ms
 **.voipServer.udpApp[0].voipHeaderSize = 4B
 **.voipServer.udpApp[0].samplingRate = 8000Hz
@@ -117,40 +117,40 @@ cmdenv-express-mode = true
 **.mac[*].promiscuous = false
 **.mac[*].duplexMode = true
 
-VoIPToolLargeNet.n = 8   # number of switches on backbone
+VoIPStreamLargeNet.n = 8   # number of switches on backbone
 
-VoIPToolLargeNet.*s = 1   # uncomment for testing: one LAN of each type on each switch
-VoIPToolLargeNet.*m = 1   # uncomment for testing: one LAN of each type on each switch
-VoIPToolLargeNet.*l = 1   # uncomment for testing: one LAN of each type on each switch
+VoIPStreamLargeNet.*s = 1   # uncomment for testing: one LAN of each type on each switch
+VoIPStreamLargeNet.*m = 1   # uncomment for testing: one LAN of each type on each switch
+VoIPStreamLargeNet.*l = 1   # uncomment for testing: one LAN of each type on each switch
 
-#VoIPToolLargeNet.bbs=6  # number of small LANs on backbone switches
-#VoIPToolLargeNet.bbm=15 # number of medium LANs on backbone switches
-#VoIPToolLargeNet.bbl=8  # number of large LANs on backbone switches
+#VoIPStreamLargeNet.bbs=6  # number of small LANs on backbone switches
+#VoIPStreamLargeNet.bbm=15 # number of medium LANs on backbone switches
+#VoIPStreamLargeNet.bbl=8  # number of large LANs on backbone switches
 
-#VoIPToolLargeNet.?s=4   # sets as,bs,cs: number of small LANs on switches A,B,C,D
-#VoIPToolLargeNet.?m=8   # sets am,bm,cm: number of medium LANs on switches A,B,C,D
-#VoIPToolLargeNet.?l=3   # sets al,bl,cl: number of large LANs on switches A,B,C,D
+#VoIPStreamLargeNet.?s=4   # sets as,bs,cs: number of small LANs on switches A,B,C,D
+#VoIPStreamLargeNet.?m=8   # sets am,bm,cm: number of medium LANs on switches A,B,C,D
+#VoIPStreamLargeNet.?l=3   # sets al,bl,cl: number of large LANs on switches A,B,C,D
 
-#VoIPToolLargeNet.*.n=12 # number of hosts connected to a switch in each LAN
-#VoIPToolLargeNet.*.n = 4 # number of hosts connected to a switch in each LAN
-#VoIPToolLargeNet.*.h = 4 # number of hosts connected to a hub in each LAN
-#VoIPToolLargeNet.*.b = 4 # number of hosts connected to a bus in each LAN
-VoIPToolLargeNet.*.n = 8 # number of hosts connected to a switch in each LAN
-VoIPToolLargeNet.*.h = 5 # number of hosts connected to a hub in each LAN
-VoIPToolLargeNet.*.b = 7 # number of hosts connected to a bus in each LAN
+#VoIPStreamLargeNet.*.n=12 # number of hosts connected to a switch in each LAN
+#VoIPStreamLargeNet.*.n = 4 # number of hosts connected to a switch in each LAN
+#VoIPStreamLargeNet.*.h = 4 # number of hosts connected to a hub in each LAN
+#VoIPStreamLargeNet.*.b = 4 # number of hosts connected to a bus in each LAN
+VoIPStreamLargeNet.*.n = 8 # number of hosts connected to a switch in each LAN
+VoIPStreamLargeNet.*.h = 5 # number of hosts connected to a hub in each LAN
+VoIPStreamLargeNet.*.b = 7 # number of hosts connected to a bus in each LAN
 
-VoIPToolLargeNet.**.cli.reqLength = intuniform(50,1400)*1B
-VoIPToolLargeNet.**.cli.respLength = truncnormal(5000B,5000B)
-VoIPToolLargeNet.**.cli.sendInterval = exponential(30s)
+VoIPStreamLargeNet.**.cli.reqLength = intuniform(50,1400)*1B
+VoIPStreamLargeNet.**.cli.respLength = truncnormal(5000B,5000B)
+VoIPStreamLargeNet.**.cli.sendInterval = exponential(30s)
 
-VoIPToolLargeNet.*.*host[0].cli.destAddress = "serverA"
-VoIPToolLargeNet.*.*host[1].cli.destAddress = "serverB"
-VoIPToolLargeNet.*.*host[2].cli.destAddress = "serverB"
-VoIPToolLargeNet.*.*host[3].cli.destAddress = "serverC"
-VoIPToolLargeNet.*.*host[4].cli.destAddress = "serverC"
-VoIPToolLargeNet.*.*host[*].cli.destAddress = "serverD"
+VoIPStreamLargeNet.*.*host[0].cli.destAddress = "serverA"
+VoIPStreamLargeNet.*.*host[1].cli.destAddress = "serverB"
+VoIPStreamLargeNet.*.*host[2].cli.destAddress = "serverB"
+VoIPStreamLargeNet.*.*host[3].cli.destAddress = "serverC"
+VoIPStreamLargeNet.*.*host[4].cli.destAddress = "serverC"
+VoIPStreamLargeNet.*.*host[*].cli.destAddress = "serverD"
 
-VoIPToolLargeNet.server*.cli.destAddress = ""
+VoIPStreamLargeNet.server*.cli.destAddress = ""
 
-VoIPToolLargeNet.*.switch.relayUnit.numCPUs = 1
-VoIPToolLargeNet.switch*.relayUnit.numCPUs = 2
+VoIPStreamLargeNet.*.switch.relayUnit.numCPUs = 1
+VoIPStreamLargeNet.switch*.relayUnit.numCPUs = 2
