--- a/examples/voipstream/VoIPStreamTest/omnetpp.ini
+++ b/examples/voipstream/VoIPStreamTest/omnetpp.ini
@@ -43,7 +43,7 @@
 
 [General]
 
-network = VoIPToolTest
+network = VoIPStreamTest
 tkenv-plugin-path = ../../../etc/plugins
 
 warnings = true
@@ -59,12 +59,12 @@ cmdenv-express-mode = true
 #[Config config1]
 # udp app
 **.client.numUdpApps = 1
-**.client.udpApp[0].typename = "VoIPSinkApp"
+**.client.udpApp[0].typename = "VoIPStreamReceiver"
 **.client.udpApp[0].localPort = 1000
 **.client.udpApp[0].resultFile = "results/${configname}_results.wav"
 
 **.server.numUdpApps = 1
-**.server.udpApp[0].typename = "VoIPSourceApp"
+**.server.udpApp[0].typename = "VoIPStreamSender"
 **.server.udpApp[0].packetTimeLength = 20ms
 **.server.udpApp[0].voipHeaderSize = 4B
 
