voip: receiver: added mosSpareTime - spare time before mos calculation

--- a/examples/voip/omnetpp.ini
+++ b/examples/voip/omnetpp.ini
@@ -16,3 +16,15 @@ network = Voip
 **.senderHost.eth[*].numOutputHooks = 1
 **.senderHost.eth[*].outputHook[0].typename = "Delayer"
 **.senderHost.eth[*].outputHook[0].delay = uniform(100ms, 250ms)
+
+[Config zero]
+**.mosSpareTime = 0s
+
+[Config half]
+**.mosSpareTime = 0.5s
+
+[Config one]
+**.mosSpareTime = 1s
+
+[Config two]
+**.mosSpareTime = 2s
